--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,8 @@ env:
   REPO_LOWER: ${{ github.repository_owner }}/${{ github.event.repository.name }}
   GHCR_REPO: ghcr.io/${{ github.repository }}
   DOCKERHUB_REPO: awwaawwa/pdfmathtranslate-next
+  ACR_REGISTRY: ${{ secrets.ACR_REGISTRY }}
+  ACR_REPO: ${{ secrets.ACR_REPOSITORY }}
   WIN_EXE_PYTHON_VERSION: "3.13.3"
 
 jobs:
@@ -175,7 +177,10 @@ jobs:
     steps:
       - name: Convert to lowercase
         run: |
-          echo "GHCR_REPO_LOWER=$(echo ${{ env.GHCR_REPO }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          printf 'GHCR_REPO_LOWER=%s\n' "$(echo "${GHCR_REPO}" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
+          if [ -n "${ACR_REPO}" ]; then
+            printf 'ACR_REPO_LOWER=%s\n' "$(echo "${ACR_REPO}" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
+          fi
 
       - name: Prepare
         run: |
@@ -207,6 +212,7 @@ jobs:
           images: |
             ${{ env.DOCKERHUB_REPO }}
             ${{ env.GHCR_REPO_LOWER }}
+            ${{ env.ACR_REPO_LOWER }}
           tags: |
             type=raw,value=dev
             type=raw,value=${{ needs.build.outputs.version }},enable=${{ needs.build.outputs.is_release != '' }}
@@ -227,6 +233,13 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Login to Aliyun ACR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.ACR_REGISTRY }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -236,7 +249,7 @@ jobs:
         with:
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,"name=${{ env.DOCKERHUB_REPO }},${{ env.GHCR_REPO_LOWER }}",push-by-digest=true,name-canonical=true,push=true
+          outputs: type=image,"name=${{ env.DOCKERHUB_REPO }},${{ env.GHCR_REPO_LOWER }},${{ env.ACR_REPO_LOWER }}",push-by-digest=true,name-canonical=true,push=true
           cache-from: ${{ matrix.platform == 'linux/amd64' && 'type=gha' || '' }}
           cache-to: ${{ matrix.platform == 'linux/amd64' && 'type=gha,mode=max' || '' }}
 
@@ -268,7 +281,10 @@ jobs:
     steps:
       - name: Convert to lowercase
         run: |
-          echo "GHCR_REPO_LOWER=$(echo ${{ env.GHCR_REPO }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          printf 'GHCR_REPO_LOWER=%s\n' "$(echo "${GHCR_REPO}" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
+          if [ -n "${ACR_REPO}" ]; then
+            printf 'ACR_REPO_LOWER=%s\n' "$(echo "${ACR_REPO}" | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_ENV"
+          fi
 
       - name: Download digests
         uses: actions/download-artifact@v5
@@ -291,6 +307,13 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Login to Aliyun ACR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.ACR_REGISTRY }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -301,6 +324,7 @@ jobs:
           images: |
             ${{ env.DOCKERHUB_REPO }}
             ${{ env.GHCR_REPO_LOWER }}
+            ${{ env.ACR_REPO_LOWER }}
           tags: |
             type=raw,value=dev
             type=raw,value=${{ needs.build.outputs.version }},enable=${{ needs.build.outputs.is_release != '' && 'true' || 'false' }}
@@ -314,6 +338,8 @@ jobs:
             $(printf '${{ env.DOCKERHUB_REPO }}@sha256:%s ' *)
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
             $(printf '${{ env.GHCR_REPO_LOWER }}@sha256:%s ' *)
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf '${{ env.ACR_REPO_LOWER }}@sha256:%s ' *)
 
       - name: Inspect image
         run: |
