feat: replace legacy HTTP API with modular service

--- a/docker-compose.api.yml
+++ b/docker-compose.api.yml
@@ -24,7 +24,7 @@ services:
       - ./outputs:/app/outputs
       - ./cache:/app/cache
     restart: unless-stopped
-    command: ["uvicorn", "pdf2zh_next.http_api:app", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["uvicorn", "pdf2zh_next.api.app:app", "--host", "0.0.0.0", "--port", "8000"]
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/docs"]
       interval: 30s
