--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,7 +24,7 @@ services:
     environment:
       - PDF2ZH_DEBUG=true
       - PYTHONPATH=/app
-    command: ["uvicorn", "pdf2zh_next.http_api:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: ["uvicorn", "pdf2zh_next.api.app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     ports:
       - "8001:8000"  # Different port for development
 
